Fixed image stretching issues

--- a/assets/scss/_addons.scss
+++ b/assets/scss/_addons.scss
@@ -141,6 +141,7 @@ body {
     img {
       height: auto;
       width: 100%;
+      max-width: $thumbnail-side;
     }
   }
 
